[gd_scene load_steps=3 format=3 uid="uid://clbrguvaac4js"]

[ext_resource type="Script" uid="uid://fphi7nbeng5y" path="res://Adventure/Events/DungeonEvent/unit_combat_card.gd" id="1_6c3o4"]
[ext_resource type="Texture2D" uid="uid://k4ebv5u8vxas" path="res://Heroes/hero.png" id="2_73nae"]

[node name="UnitCombatSummary" type="VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
offset_right = 150.0
offset_bottom = 135.0
script = ExtResource("1_6c3o4")

[node name="Name" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Hero McBrave"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
self_modulate = Color(1, 0, 0, 1)
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
value = 50.0
show_percentage = false

[node name="HealthText" type="Label" parent="HealthBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "1/2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BattleSprite" type="TextureRect" parent="."]
unique_name_in_owner = true
texture_filter = 3
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
texture = ExtResource("2_73nae")
stretch_mode = 5
